--- a/dev/users/users.template.html
+++ b/dev/users/users.template.html
@@ -1,4 +1,7 @@
 <h2>Users</h2>
+<p>
+    <a [routerLink]="['NewUser']" class="btn btn-primary">Add User</a>
+</p>
 <table class="table table-bordered">
     <thead>
     <tr>
